--- a/Basics/AddNumbers-02/AddNumbers-02.csproj
+++ b/Basics/AddNumbers-02/AddNumbers-02.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{AE86527E-F216-41B8-AFA5-A169963E61E4}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>AddNumbers_02</RootNamespace>
-    <AssemblyName>AddNumbers_02</AssemblyName>
+    <AssemblyName>AddNumbers-02</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
