--- a/Basics/Logic-02/Logic-02.csproj
+++ b/Basics/Logic-02/Logic-02.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{EE2E1A8F-D19D-4A29-BB5D-B49CA4E59CB5}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>Logic_02</RootNamespace>
-    <AssemblyName>Logic_02</AssemblyName>
+    <AssemblyName>Logic-02</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
