--- a/Basics/Logic-03/Logic-03.csproj
+++ b/Basics/Logic-03/Logic-03.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{08B2B107-E18A-46ED-8F72-EA04D24E3C1D}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>Logic_03</RootNamespace>
-    <AssemblyName>Logic_03</AssemblyName>
+    <AssemblyName>Logic-03</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
