--- a/Basics/Logic-04/Logic-04.csproj
+++ b/Basics/Logic-04/Logic-04.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{37E3026A-F171-4DE8-A98E-A9AA60D3CCB7}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>Logic_04</RootNamespace>
-    <AssemblyName>Logic_04</AssemblyName>
+    <AssemblyName>Logic-04</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
