--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 /csharp-basics/*/*/.vs/*
 /csharp-basics/exercises/*/*/obj/*
 /csharp-basics/exercises/*/*/bin/*
+/.vs/*
+*.cache
+*/**/obj/*
+*/**/bin/*
