--- a/csharp-basics/exercises/Account/Account.csproj
+++ b/csharp-basics/exercises/Account/Account.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{30AEBEA4-6321-4813-87A6-BA8D188A7D85}</ProjectGuid>
+    <ProjectGuid>{A78CD5DF-1FF9-4A14-A78F-7AED668C98A4}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>EnergyDrinks</RootNamespace>
-    <AssemblyName>EnergyDrinks</AssemblyName>
+    <RootNamespace>Account</RootNamespace>
+    <AssemblyName>Account</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
