--- a/csharp-basics/exercises/Loops/Loops/Exercise3/Exercise3.csproj
+++ b/csharp-basics/exercises/Loops/Loops/Exercise3/Exercise3.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Test.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Test\Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
